--- a/index.html
+++ b/index.html
@@ -13,11 +13,34 @@
     <div class="nav-wrapper blue">
         <div class="container">
             <a href="" class="brand-logo center">Track Calories</a>
+            <ul class="right">
+                <li><a href="#" class="clear-btn btn blue lighten-3">Clear All</a></li>
+            </ul>
         </div>
     </div>
 </nav>
 
+<br>
 
+<div class="container">
+    <div class="card">
+        <div class="card-content">
+            <span class="card-title">Add Meal | Food Item</span>
+            <form class="col">
+                <div class="row">
+                <div class="input-field col s6">
+                    <input type="text" placeholder="Add Item" id="item-name">
+                    <label for="item-name">Meal</label>
+                </div>
+                <div class="input-field col s6">
+                    <input type="text" placeholder="Add Calories" id="item-calories">
+                    <label for="item-calories">Calories</label>
+                </div>
+            </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 
 
