--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <br>
 
 <div class="container">
+
+    <!-- FORM CARD NAVBAR -->
     <div class="card">
         <div class="card-content">
             <span class="card-title">Add Meal | Food Item</span>
@@ -36,10 +38,23 @@
                     <input type="text" placeholder="Add Calories" id="item-calories">
                     <label for="item-calories">Calories</label>
                 </div>
+                <button class="add-btn btn blue darken-3"><i class="fa fa-plus"></i>Add Meal</button>
+                <!-- <button class="update-btn btn orange"><i class="fa fa-pencil-square-o"></i>Update Meal</button> -->
+                <!-- <button class="delete-btn btn red"><i class="fa fa-remove"></i>Remove Meal</button> -->
+                <button class="back-btn btn grey pull-right"><i class="fa fa-chevron-circle-left"></i>Back</button>
             </div>
             </form>
         </div>
     </div>
+
+    <!-- CALORIE COUNT -->
+    <h3 class="center-align">Total Calories: <span class="total-calories"></span></h3>
+    <!-- ITEM LIST -->
+    <ul id="item-list" class="collection">
+        <li class="collection-item" id="item-0">
+            <strong>Steak Dinner: </strong> <em>1200 Calories</em>
+        </li>
+    </ul>
 </div>
 
 
