--- a/index.html
+++ b/index.html
@@ -51,9 +51,24 @@
     <h3 class="center-align">Total Calories: <span class="total-calories"></span></h3>
     <!-- ITEM LIST -->
     <ul id="item-list" class="collection">
-        <li class="collection-item" id="item-0">
+        <!-- <li class="collection-item" id="item-0">
             <strong>Steak Dinner: </strong> <em>1200 Calories</em>
+            <a href="#" class="secondary-content">
+                <i class="class fa fa-pencil"></i>
+            </a>
         </li>
+        <li class="collection-item" id="item-0">
+            <strong>Cookie: </strong> <em>400 Calories</em>
+            <a href="#" class="secondary-content">
+                <i class="class fa fa-pencil"></i>
+            </a>
+        </li>
+        <li class="collection-item" id="item-0">
+            <strong>Omelette: </strong> <em>800 Calories</em>
+            <a href="#" class="secondary-content">
+                <i class="class fa fa-pencil"></i>
+            </a>
+        </li> -->
     </ul>
 </div>
 
