--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
         <!-- <li class="collection-item" id="item-0">
             <strong>Steak Dinner: </strong> <em>1200 Calories</em>
             <a href="#" class="secondary-content">
-                <i class="class fa fa-pencil"></i>
+                <i class="edit-item fa fa-pencil"></i>
             </a>
         </li>
         <li class="collection-item" id="item-0">
             <strong>Cookie: </strong> <em>400 Calories</em>
             <a href="#" class="secondary-content">
-                <i class="class fa fa-pencil"></i>
+                <i class="edit-item fa fa-pencil"></i>
             </a>
         </li>
         <li class="collection-item" id="item-0">
             <strong>Omelette: </strong> <em>800 Calories</em>
             <a href="#" class="secondary-content">
-                <i class="class fa fa-pencil"></i>
+                <i class="edit-item fa fa-pencil"></i>
             </a>
         </li> -->
     </ul>
