--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <!-- CALORIE COUNT -->
-    <h3 class="center-align">Total Calories: <span class="total-calories"></span></h3>
+    <h3 class="center-align">Total Calories: <span class="total-calories">0</span></h3>
     <!-- ITEM LIST -->
     <ul id="item-list" class="collection">
         <!-- <li class="collection-item" id="item-0">
